Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10193

[shell32] REGRESSION: recycle bin icon is completely transparent

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Shell
    • None
    • r69244 GCC dbg

    Description

      I updated from r69229 to r69244

      now the "Recycle bin" icon on desktop is broken.

      If I would have to quick-guess (without further researches or testing),
      I'd fingerpoint to

      r69237 | rnaumann | 2015-09-15 12:28:01 +0200 (Di, 15 Sep 2015) | 1 line
      [SHELL32] Add missing icons. Patch by Jared Smudde CORE-9938

      please correct me, if I am wrong...
      Can anyone confirm the symptom?

      Attachments

        Activity

          People

            gonzoMD gonzoMD
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: