[SHELL33] fix a typo and the icon id's in recyclebin reg script. Now the icons are correct again. CORE-10193

svn path=/trunk/; revision=69247